--- a/subprojects/docs/src/docs/userguide/managing_transitive_dependencies.adoc
+++ b/subprojects/docs/src/docs/userguide/managing_transitive_dependencies.adoc
@@ -167,7 +167,7 @@ Gradle treats all entries in the `<dependencyManagement>` block of a BOM similar
 
 However often BOMs are not only providing versions as recommendations, but also a way to override any over version found in the graph. You can enable this behavior by using the `enforcedPlatform` keyword, instead of `platform`, when importing the BOM:
 
-.Importing a BOM, making sure the versions it defines override any other version found in the graph
+.Importing a BOM, making sure the versions it defines override any other version found
 ====
 include::sample[dir="userguide/dependencyManagement/managingTransitiveDependencies/constraintsFromBOM/groovy",files="build.gradle[tags=dependency-on-bom]"]
 include::sample[dir="userguide/dependencyManagement/managingTransitiveDependencies/constraintsFromBOM/kotlin",files="build.gradle.kts[tags=dependency-on-bom]"]
@@ -175,11 +175,16 @@ include::sample[dir="userguide/dependencyManagement/managingTransitiveDependenci
 
 [[sec:version_alignment]]
 == Dependency version alignment
+
+Dependency version alignment allows different modules belonging to the same logical group (a _platform_) to have identical versions in a dependency graph.
+
 === Handling inconsistent module versions
-Gradle supports aligning versions of modules which belong to the same "platform". It is often preferable, for example, that the API and implementation modules of a component are using the same version. However, because of the game of transitive dependency resolution, it is possible that different modules belonging to the same platform end up using different versions.
+Gradle supports aligning versions of modules which belong to the same "platform".
+It is often preferable, for example, that the API and implementation modules of a component are using the same version.
+However, because of the game of transitive dependency resolution, it is possible that different modules belonging to the same platform end up using different versions.
 For example, your project may depend on the `jackson-databind` and `vert.x` libraries, as illustrated below:
 
-.A dependency on the Jackson library
+.Declaring dependencies
 ====
 include::sample[dir="userguide/dependencyManagement/managingTransitiveDependencies/dependencyAlignment/groovy",files="build.gradle[tags=dependencies]"]
 include::sample[dir="userguide/dependencyManagement/managingTransitiveDependencies/dependencyAlignment/kotlin",files="build.gradle.kts[tags=dependencies]"]
@@ -191,21 +196,23 @@ Because `vert.x` depends on `jackson-core`, we would actually resolve the follow
 - `jackson-databind` version `2.9.5` (by conflict resolution)
 - `jackson-annotation` version `2.9.0` (dependency of `jackson-databind:2.9.5`)
 
-It's easy to end up with a set of versions which do not work well together. To fix this, Gradle supports dependency version alignment, which is supported by the concept of platform. A platform represents a set of modules which "work well together". Either because they are actually published as a whole (when one of the members of the platform is published, all other modules are also published with the same version), or because someone tested modules and indicates that they work well together (typically, the Spring Platform).
+It's easy to end up with a set of versions which do not work well together.
+To fix this, Gradle supports dependency version alignment, which is supported by the concept of platform. A platform represents a set of modules which "work well together".
+Either because they are actually published as a whole (when one of the members of the platform is published, all other modules are also published with the same version), or because someone tested modules and indicates that they work well together (typically, the Spring Platform).
 
 === Declaring participation in a platform
 
 We can fix the example above by declaring that all Jackson modules "belong to" the same platform.
 
-.An alignment rule
+.A dependency version alignment rule
 ====
 include::sample[dir="userguide/dependencyManagement/managingTransitiveDependencies/dependencyAlignment/groovy",files="build.gradle[tags=alignment-rule]"]
 include::sample[dir="userguide/dependencyManagement/managingTransitiveDependencies/dependencyAlignment/kotlin",files="build.gradle.kts[tags=alignment-rule]"]
 ====
 
-By using the `belongsTo` keyword, we declare that all modules belong to the same _virtual platform_, which is treated specially by the engine, in particular with regards to alignment. We can use the rule by adding it to the component metadata rules:
+By using the `belongsTo` keyword, we declare that all modules belong to the same _virtual platform_, which is treated specially by the engine, in particular with regards to alignment. We can use the rule we just created by registering it:
 
-.Using the rule
+.Making use of a dependency version alignment rule
 ====
 include::sample[dir="userguide/dependencyManagement/managingTransitiveDependencies/dependencyAlignment/groovy",files="build.gradle[tags=use_rule]"]
 include::sample[dir="userguide/dependencyManagement/managingTransitiveDependencies/dependencyAlignment/kotlin",files="build.gradle.kts[tags=use_rule]"]
@@ -221,8 +228,10 @@ include::sample[dir="userguide/dependencyManagement/managingTransitiveDependenci
 
 === Virtual vs published platforms
 
-A platform defined by a component metadata rule for which the `belongsTo` target module isn't published on a repository is called a virtual platform. A virtual platform is considered specially by the engine and participates in dependency resolution like a published module, but triggers dependency version alignment.
-On the other hand, we can find "real" platforms published on public repositories. Typical examples include BOMs, like the Spring BOM. They differ in the sense that a published platform may refer to modules which are effectively different things. For example the Spring BOM declares dependencies on Spring as well as Apache Groovy. Obviously those things are versioned differently, so it doesn't make sense to align in this case. In other words, if a platform is _published_, Gradle trusts its metadata, and will not try to align dependency versions of this platform.
+A platform defined by a component metadata rule for which the `belongsTo` target module isn't published on a repository is called a virtual platform.
+A virtual platform is considered specially by the engine and participates in dependency resolution like a published module, but triggers dependency version alignment.
+On the other hand, we can find "real" platforms published on public repositories. Typical examples include BOMs, like the Spring BOM. They differ in the sense that a published platform may refer to modules which are effectively different things.
+For example the Spring BOM declares dependencies on Spring as well as Apache Groovy. Obviously those things are versioned differently, so it doesn't make sense to align in this case. In other words, if a platform is _published_, Gradle trusts its metadata, and will not try to align dependency versions of this platform.
 
 [NOTE]
 ====
